FIX: adaptada/actualizada toda la BD